# filekid

./: .gitignore  CLAUDE.md  CODEOWNERS  Cargo.toml  Dockerfile  README.md  SECURITY.md  justfile
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: clippy.yml  rust_test.yml
files/: example-config.json
files/testdir/testdir2/: testdirfile2.txt
src/: cli.rs  config.rs  constants.rs  error.rs  lib.rs  log.rs  main.rs  oidc.rs  prelude.rs  session_store.rs  web.rs
src/fs/: local.rs  mod.rs  s3.rs  tempdir.rs
src/views/: browse.rs  delete.rs  mod.rs  oidc.rs  prelude.rs
static/: filekid.css
templates/: basetemplate.html  browse.html  delete_form.html  error.html  index.html
