[package]
name = "filekid"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.13.0" }
async-trait = "0.1.88"
axum = { version = "0.8.3", features = [
    "macros",
    "multipart",
    "http2",
    "tracing",
] }
axum-oidc = "0.6.0"
axum-server = { version = "0.7.2", features = ["rustls", "tls-rustls"] }
clap = { version = "4.5.32", features = ["derive", "env"] }
enum-iterator = "2.1.0"
env_logger = "0.11.7"
etcetera = "0.10.0"
futures = "0.3.31"
log = { version = "0.4.26", features = ["serde"] }
mime_guess = "2.0.5"
schemars = { version = "0.8.22", features = ["uuid", "url"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
tokio = { version = "1.44.1", features = [
    "time",
    "tokio-macros",
    "tracing",
    "rt-multi-thread",
    "full",
] }
tokio-util = "0.7.14"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "limit"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = [
    "sqlite",
], default-features = false }
tracing = "0.1.41"

[dev-dependencies]
chrono = "0.4.40"
openidconnect = "3.5.0"
