[package]
name = "filekid"
version = "0.1.1"
edition = "2024"

[dependencies]
askama = { version = "0.15.1" }
async-trait = "0.1.89"
axum = { version = "0.8.8", features = [
    "macros",
    "multipart",
    "http2",
    "tracing",
] }
# axum-oidc = 0.6.0
axum-oidc = { git = "https://github.com/pfzetto/axum-oidc", branch = "pfzetto" } # until https://github.com/pfzetto/axum-oidc/pull/23 is merged
axum-server = { version = "0.8.0", features = ["rustls", "tls-rustls"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
enum-iterator = "2.3.0"
env_logger = "0.11.8"
etcetera = "0.11.0"
futures = "0.3.31"
log = { version = "0.4.29", features = ["serde"] }
mime_guess = "2.0.5"
rustls = { version = "0.23.36", features = ["aws-lc-rs"] }
# schemars = { version = "0.9.0", features = ["uuid"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = [
    "time",
    "tokio-macros",
    "tracing",
    "rt-multi-thread",
    "full",
] }
tokio-util = "0.7.18"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "limit"] }
tower-sessions = "0.15.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = [
    "sqlite",
], default-features = false }
tracing = "0.1.44"

[dev-dependencies]
chrono = "0.4.43"
openidconnect = "4.0.1"
